--- a/static/css/index.css
+++ b/static/css/index.css
@@ -5,34 +5,77 @@
 .banner{
     display: flex;
     flex-direction: column;
-    background: #4cc9f0;
+    background: #17F0D2;
     border-radius: 20px;
     align-items: center;
-    padding: 15px 60px;
-    margin-top: 5%;
+    padding: 20px 65px;
+    margin-top: 6%;
+    margin-bottom: 2%;
+}
+.card{
+    border-radius: 50px;
+    background: #2C2F47;
+    padding: 10px;
 }
 
 .container-our-categories{
     display: flex;
     justify-content: center;
     margin-top: 5%;
+    padding-bottom: 10%;
 }
+
 .container-our-categories .card{
     display: flex;
     flex-direction: column;
     margin: 20px 10px;
 }
 
+.container-our-categories .card-body{
+    background: #2C2F47;
+}
 
+.card-body .card-title{
+   color: #17F0D2;
+}
 
+.card-body .card-text{
+    color: white;
+ }
 .card-hover {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 .card-hover:hover {
     transform: translateY(-8px);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
 }
 
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+    padding: 20px;
+}
+
+.featured-products{
+    margin-top: 5%;
+    padding-top: 5%;
+}
+
+
+.container-featured-products .card{
+    display: flex;
+    flex-direction: column;
+    margin: 10px 10px;
+}
 
 
 @media screen and (max-width: 768px) {
@@ -43,9 +86,52 @@
     .banner{
         width: 80%;
         padding: 15px 20px;
-        margin-top: 18%;
+        margin-top: 25%;
     }
-    
+    .title-featured{
+        margin-top: 5%;
+        margin-bottom: 5%;
+    }
+    .container-featured-products {
+        padding: 15px;
 
+      }
+
+}
+
+
+ /* móviles pequeños */ 
+@media (max-width: 640px) {
+    .title-featured{
+        margin-top: 15%;
+        margin-bottom: 15%;
+    }
+}
+
+/* móviles grandes y tablets verticales */ 
+@media (min-width: 641px) and (max-width: 768px) { 
+
+}
+
+/* tablets horizontales y laptops pequeñas */ 
+@media (min-width: 769px) and (max-width: 1024px) { 
+    .banner{
+        margin-top: 10%;
+    }
+
+    .title-featured{
+        margin-top: 5%;
+        margin-bottom: 5%;
+    }
+
+  
+}
+
+/* escritorio y pantallas grandes */
+@media (min-width: 1025px) {
+    .title-featured{
+        margin-top: 5%;
+        margin-bottom: 5%;
+    }
 }
 
