--- a/templates/base.html
+++ b/templates/base.html
@@ -10,28 +10,28 @@
     <title>{% block title %} Byte & Beat {% endblock %}</title>
 </head>
 
-<body style="background-color: #8198ff;">
+<body style="background-color: #1E1F36;">
     <header>
-        <nav class="navbar navbar-expand-lg fixed-top"  style="background: #4638EE;">
+        <nav class="navbar navbar-expand-lg fixed-top"  style="background: #191B2A;">
             <div class="container-fluid d-flex" >
               <div class="d-flex align-items-center gap-2 order-1">
                 <button class="navbar-toggler" style="background-color: white;" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                   aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
-                <a class="navbar-brand mb-0 h1 fs-3 text-light" href="#">Byte & Beat</a>
+                <a class="navbar-brand mb-0 h1 fs-3" style="color: #17F0D2;" href="#">Byte & Beat</a>
               </div>
           
               <div class="collapse navbar-collapse justify-content-center order-3 order-lg-2 fs-5" id="navbarNav">
                 <div class="navbar-nav text-lg-start ">
                   <a class="nav-link active text-light" href="#">Inicio</a>
                   <a class="nav-link text-light" href="#">Productos</a>
-                  <a class="nav-link text-light" href="#">Categorias</a>
+                  <a class="nav-link text-light" href="#categories">Categorias</a>
                 </div>
               </div>
               <div class="d-flex gap-4 align-items-center order-2 order-lg-3" style="font-size: 32px;">
                 <a href="#"><i class="bi bi-basket2" style="color: white;"></i></a>
-                <a href="#"><i class="bi bi-person" style="color: white;"></i></a>
+                <a href="{% url 'login' %}"><i class="bi bi-person" style="color: white;"></i></a>
               </div>
             </div>
           </nav>
