--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -38,7 +38,7 @@
                         </div>
                         <div class="mt-4 mb-4" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
                             <a style="color: #17F0D2; text-decoration: none;" href="{% url 'register' %}">Registrarse</a>
-                            <a style="color: #17F0D2; text-decoration: none;" href="#">Recuperar contraseña</a>
+                            <a style="color: #17F0D2; text-decoration: none;" href="{% url 'password_reset' %}">Recuperar contraseña</a>
                         </div>
                         
                         <hr style="color: #17F0D2;">
