--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 {% include 'modals/alert_modal.html'%}
-
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
     <title>{% block title %} Byte & Beat {% endblock %}</title>
 </head>
 
@@ -29,11 +30,19 @@
                   <a class="nav-link active text-light" href="#">Inicio</a>
                   <a class="nav-link text-light" href="#">Productos</a>
                   <a class="nav-link text-light" href="#categories">Categorias</a>
+                  {% if user.is_authenticated %}
+                    <a class="nav-link text-light" href="{% url 'logout' %}">Cerrar sesion</a>
+                  {% endif %}
                 </div>
               </div>
               <div class="d-flex gap-4 align-items-center order-2 order-lg-3" style="font-size: 32px;">
                 <a href="#"><i class="bi bi-basket2" style="color: white;"></i></a>
-                <a href="{% url 'login' %}"><i class="bi bi-person" style="color: white;"></i></a>
+                {% if user.is_authenticated %}
+                  <a href="" class="initial-user">{{ initial | title }}</a>
+                {% else %}
+                  <a href="{% url 'login' %}"><i class="bi bi-person" style="color: white;"></i></a>
+                {% endif %}
+                
               </div>
             </div>
           </nav>
