--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -28,30 +28,17 @@
                     <form method="POST">
                         {% csrf_token %}
                         
-                        <div class="form-group">
-                            <label for="username">Nombres:</label>
-                            {{ form.username }}
+                        {% for m in form %}
+                        <div class="form-group" style="color: white;">
+                            {{m.label_tag}}
+                            {{m}}
+                            <div style="padding-top: 5px;">
+                                {% if m.errors %}
+                                    {{m.errors}}
+                                {% endif %}
+                            </div>
                         </div>
-
-                        <div class="form-group">
-                            <label for="lastname">Apellidos:</label>
-                            {{ form.lastname }}
-                        </div>
-                        
-                        <div class="form-group">
-                            <label for="email">Correo:</label>
-                            {{ form.email }}
-                        </div>
-                        
-                        <div class="form-group">
-                            <label for="password">Contraseña:</label>
-                            {{ form.password }}
-                        </div>
-
-                        <div class="form-group">
-                            <label for="password2">Confirmar Contraseña:</label>
-                            {{ form.password2 }}
-                        </div>
+                        {% endfor %}
 
                         <div class="mt-4 mb-4" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
                             <a style="color: #17F0D2; text-decoration: none;" href="{% url 'login' %}">¿Ya tienes cuenta? Iniciar sesión</a>
