--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,8 @@
 </head>
 
 <body style="background-color: #1E1F36;">
+  
+  {% block navbar %}
     <header>
         <nav class="navbar navbar-expand-lg fixed-top"  style="background: #191B2A;">
             <div class="container-fluid d-flex" >
@@ -51,6 +53,7 @@
 
         {% endblock %}
     </header>
+    {% endblock %}
     
     
 
