--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -1,20 +1,13 @@
+{% extends 'base.html' %}
 {% load static %}
-{% include 'modals/alert_modal.html' %}
-<!DOCTYPE html>
-<html lang="en">
+{% block title %} Iniciar Sesion {% endblock %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/login.css' %}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <title>{% block title %} Iniciar Sesion {% endblock %}</title>
-</head>
+{% block navbar %}{% endblock %}
+{% block content %}
+<link rel="stylesheet" href="{% static 'css/login.css' %}">
+  
 
-<body style="background: #1E1F36;">
-    <div style="display: flex; justify-content: center; align-items: center; margin-top: 2%;">
+    <div style="display: flex; justify-content: center; align-items: center; margin-top: -1%;">
         <a style="text-decoration: none;" href="{% url 'index' %}"><h2 style="color: #17F0D2; font-size: 40px;">Byte & Beat</h2></a>
     </div>
     
@@ -53,12 +46,4 @@
         </div>
             
     </section>
-
-
-
-</body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
-    crossorigin="anonymous"></script>
-
-</html>
+{% endblock %}
