--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -1,65 +1,50 @@
+{% extends 'base.html' %}
 {% load static %}
-{% include 'modals/alert_modal.html' %}
+{% block title %} Registrarse {% endblock %}
 
-<!DOCTYPE html>
-<html lang="en">
+{% block navbar %}{% endblock %}
+{% block content %}
+<link rel="stylesheet" href="{% static 'css/register.css' %}">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/register.css' %}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <title>{% block title %} Registrarse {% endblock %}</title>
-</head>
+<div style="display: flex; justify-content: center; align-items: center; margin-top: -1%;">
+    <a style="text-decoration: none;" href="{% url 'index' %}"><h2 style="color: #17F0D2; font-size: 40px;">Byte & Beat</h2></a>
+</div>
 
-<body style="background: #1E1F36;">
-    <div style="display: flex; justify-content: center; align-items: center; margin-top: 2%;">
-        <a style="text-decoration: none;" href="{% url 'index' %}"><h2 style="color: #17F0D2; font-size: 40px;">Byte & Beat</h2></a>
-    </div>
-    
-
-    <section class="register-wrapper" style="margin-bottom: 100px;">
-        <div class="container-register mt-5">
-            <div class="card">
-                <div class="card-body ">
-                    <h3>Registrarse</h3>
-                    <form method="POST">
-                        {% csrf_token %}
-                        
-                        {% for m in form %}
-                        <div class="form-group" style="color: white;">
-                            {{m.label_tag}}
-                            {{m}}
-                            <div style="padding-top: 5px;">
-                                {% if m.errors %}
-                                    {{m.errors}}
-                                {% endif %}
-                            </div>
+<section class="register-wrapper" style="margin-bottom: 100px;">
+    <div class="container-register mt-5">
+        <div class="card">
+            <div class="card-body ">
+                <h3>Registrarse</h3>
+                <form method="POST">
+                    {% csrf_token %}
+                    
+                    {% for m in form %}
+                    <div class="form-group" style="color: white;">
+                        {{m.label_tag}}
+                        {{m}}
+                        <div style="padding-top: 5px;">
+                            {% if m.errors %}
+                                {{m.errors}}
+                            {% endif %}
                         </div>
-                        {% endfor %}
+                    </div>
+                    {% endfor %}
 
-                        <div class="mt-4 mb-4" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
-                            <a style="color: #17F0D2; text-decoration: none;" href="{% url 'login' %}">¿Ya tienes cuenta? Iniciar sesión</a>
-                        </div>
-                        
-                        <hr style="color: #17F0D2;">
-                        <button type="submit" class="btn w-100 py-2"
-                            style="margin-bottom: 20px; background-color: #17F0D2; color: #1E1F36; font-weight: bold;">
-                            Registrarse
-                        </button>
-                    </form>
+                    <div class="mt-4 mb-4" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+                        <a style="color: #17F0D2; text-decoration: none;" href="{% url 'login' %}">¿Ya tienes cuenta? Iniciar sesión</a>
+                    </div>
+                    
+                    <hr style="color: #17F0D2;">
+                    <button type="submit" class="btn w-100 py-2"
+                        style="margin-bottom: 20px; background-color: #17F0D2; color: #1E1F36; font-weight: bold;">
+                        Registrarse
+                    </button>
+                </form>
 
-                </div>
             </div>
         </div>
-            
-    </section>
+    </div>
+        
+</section>
+{% endblock %}
 
-</body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
-    crossorigin="anonymous"></script>
-
-</html>
