--- a/products/templates/detail_product.html
+++ b/products/templates/detail_product.html
@@ -1,16 +1,29 @@
 {% extends 'base.html' %}
+{% load precios_tag %}
 
+
+<div style="margin-top: 40px; background: red;">
+    <h2 style="color: aliceblue;">HOLA</h2>
+</div>
 
 {% block content %}
-{% for product in products %}
-<div style="background-color: white;">
-    {{product.name}}
-    {{ product.brand }}
-    {% if product.main_image %}
-    <img src="{{ product.main_image.url }}" alt="{{ product.name }}" style="width: 100px; height: 100px;" loading="lazy">
-    {% endif %}
-    {{ product.price}}
+
+<div>
+    <div class="card" style="width: 250px;">
+        <div class="card-body">
+            <div style="background-color: white;">
+                {% if product.main_image %}
+                <img src="{{ product.main_image.url }}" alt="{{ product.name }}" style="width: 100px; height: 100px;"
+                    loading="lazy">
+                {% endif %}
+                {{product.name}}
+                {{ product.brand }}
+                
+                {{ product.price | format_price}}
+            </div>
+        </div>
+    </div>
+
 </div>
-{% endfor %}
 
 {% endblock %}
