--- a/cart/templates/cart_detail.html
+++ b/cart/templates/cart_detail.html
@@ -1,3 +1,58 @@
 {% extends 'base.html' %}
+{% load precios_tag %}
+{% block content %}
 
-{}
+<div style="background: #2D2D2D; margin: 0px 200px; padding: 0px 50px;">
+
+    <div style="display: flex; justify-content: space-between; padding: 20px; align-items: flex-start;">
+    
+        <!-- Productos -->
+        <div style="color: white; width: 600px; margin-right: 30px;"> <!-- Ancho ajustado para los productos -->
+            <div class="card">
+                <div class="card-body" style="display: flex; flex-direction: column;">
+                    {% if cart.productos.exists %}
+                        {% for product in cart.productos.all %}
+                        <div style="background: #444444; margin-bottom: 20px; padding: 15px; border-radius: 8px;">
+                            <div style="display: flex; align-items: center; justify-content: space-between;">
+                                <div style="display: flex; flex-direction: row; align-items: center;">
+                                    {% if product.main_image %}
+                                        <img src="{{ product.main_image.url }}" alt="" width="120" height="120" style="border-radius: 8px; margin-right: 15px;">
+                                    {% endif %}
+                                    <div style="display: flex; flex-direction: column;">
+                                        <p style="font-size: 18px; color: #FFFFFF; margin: 5px 0;">{{ product.name }}</p>
+                                        <p style="font-size: 16px; color: #B8B8B8; margin: 5px 0;">Marca: {{ product.brand }}</p>
+                                        <p style="font-size: 16px; color: #FFFFFF; margin: 5px 0;">Precio: {{ product.price | format_price }}</p>
+                                    </div>
+                                </div>
+                                <div style="display: flex; flex-direction: row; align-items: center; color: #FFFFFF;">
+                                    <p style="margin-right: 10px;">Cantidad: {{ forloop.counter }}</p>
+                                    <div>{% include 'remove.html' %}</div>
+                                </div>
+                            </div>
+                        </div>
+                        {% endfor %}
+                    {% else %}
+                    <h3 style="color: white;">El carrito está vacío</h3>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+
+        <!-- Resumen del pedido -->
+        {% if cart.productos.exists %}
+        <div style="background-color: #1A1A1A; color: white; width: 300px; padding: 20px; border-radius: 8px;">
+            <h4 style="font-size: 24px; margin-bottom: 10px;">Resumen del Pedido</h4>
+            <p style="font-size: 18px; margin-bottom: 10px;">Subtotal: {{ cart.subtotal | format_price }}</p>
+            <p style="font-size: 18px; margin-bottom: 10px;">Envío: {{ cart.shipping | format_price }}</p>
+            <hr style="border-top: 1px solid #333;">
+            <p style="font-size: 18px; font-weight: bold;">Total: {{ cart.total | format_price }}</p>
+            <button class="btn btn-primary" style="margin-top: 15px;">Proceder al pago</button>
+            <button class="btn btn-secondary" style="margin-top: 10px; background-color: #444; border: none;">Continuar comprando</button>
+        </div>
+        {% else %}
+         <a href="{% url 'view_products' %}" style="background: black; text-decoration: none; color: white; padding: 10px; border-radius: 8px;">Comprar ahora</a>
+        {% endif %}
+    </div>
+</div>
+
+{% endblock %}
