--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
                 </div>
               </div>
               <div class="d-flex gap-4 align-items-center order-2 order-lg-3" style="font-size: 32px;">
-                <a href="#"><i class="bi bi-basket2" style="color: white;"></i></a>
+                <a href="{% url 'cart' %}"><i class="bi bi-basket2" style="color: white;"></i></a>
                 {% if user.is_authenticated %}
                   <a href="" class="initial-user">{{ initial | title }}</a>
                 {% else %}
