--- a/users/templates/reset_password/password_reset.html
+++ b/users/templates/reset_password/password_reset.html
@@ -18,7 +18,10 @@
                     <h3>Recuperar Contraseña</h3>
                     <form method="post">
                         {% csrf_token %}
-                        <p style="color: white;">¿Olvidaste tu contraseña? Ingrese su dirección de correo electrónico a continuación y le enviaremos instrucciones por correo electrónico para configurar una nueva.</p>
+                        <div style="text-align: center;">   
+                            <p style="color: white;" >¿Olvidaste tu contraseña? 
+                                <br>Ingrese su dirección de correo electrónico y le enviaremos instrucciones para configurar una nueva contraseña.</p>
+                        </div>
                         
                         <div class="input-group" style="color: white;">
                             {{ form.email }}
