--- a/cart/templates/add.html
+++ b/cart/templates/add.html
@@ -1,6 +1,28 @@
 <form action="{% url 'add' %}" method="post">
     {% csrf_token %}
     <input type="hidden" name="product_id" value="{{ product.id }}">
-
+    <div>
+        <button type="button" class="btn btn-danger d-inline" id="remove">-</button>
+        <input type="number" value="1" class="form-control-1 d-inline"  id="quantity" name="quantity"readonly>
+        <button type="button" class="btn btn-danger d-inline" id="add">+</button>
+    </div>
     <button type="submit">Agregar al carrito</button>
 </form>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const add = document.getElementById('add');
+        const remove = document.getElementById('remove');
+        const quantity = document.getElementById('quantity');
+
+        add.addEventListener('click', function () {
+            quantity.value = parseInt(quantity.value) + 1;
+        });
+
+        remove.addEventListener('click', function () {
+            if (parseInt(quantity.value) > 1) {
+                quantity.value = parseInt(quantity.value) - 1;
+            }
+        });
+    });
+</script>
