--- a/templates/base.html
+++ b/templates/base.html
@@ -5,71 +5,74 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
-    <title>{% block title %} Byte & Beat {% endblock %}</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
+  <title>{% block title %} Byte & Beat {% endblock %}</title>
 </head>
 
 <body style="background-color: #1E1F36;">
-  
+
   {% block navbar %}
-    <header>
-        <nav class="navbar navbar-expand-lg fixed-top"  style="background: #191B2A;">
-            <div class="container-fluid d-flex" >
-              <div class="d-flex align-items-center gap-2 order-1">
-                <button class="navbar-toggler" style="background-color: white;" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <a class="navbar-brand mb-0 h1 fs-3" style="color: #17F0D2;" href="{% url 'index' %}">Byte & Beat</a>
-              </div>
-          
-              <div class="collapse navbar-collapse justify-content-center order-3 order-lg-2 fs-5" id="navbarNav">
-                <div class="navbar-nav text-lg-start ">
-                  <a class="nav-link active text-light" href="{% url 'index' %}">Inicio</a>
-                  <a class="nav-link text-light" href="{% url 'view_products' %}">Productos</a>
-                  <a class="nav-link text-light" href="#categories">Categorias</a>
-                  {% if user.is_authenticated %}
-                    <a class="nav-link text-light" href="{% url 'logout' %}">Cerrar sesion</a>
-                  {% endif %}
-                </div>
-              </div>
-              <div class="d-flex gap-4 align-items-center order-2 order-lg-3" style="font-size: 32px;">
-                <a href="{% url 'cart' %}"><i class="bi bi-basket2" style="color: white;"></i></a>
-                {% if user.is_authenticated %}
-                  <a href="" class="initial-user">{{ initial | title }}</a>
-                {% else %}
-                  <a href="{% url 'login' %}"><i class="bi bi-person" style="color: white;"></i></a>
-                {% endif %}
-                
-              </div>
-            </div>
-          </nav>
-        
-        {% block banner %}
+  <header>
+    <nav class="navbar navbar-expand-lg fixed-top" style="background: #191B2A;">
+      <div class="container-fluid d-flex">
+        <div class="d-flex align-items-center gap-2 order-1">
+          <button class="navbar-toggler" style="background-color: white;" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <a class="navbar-brand mb-0 h1 fs-3" style="color: #17F0D2;" href="{% url 'index' %}">Byte & Beat</a>
+        </div>
 
-        {% endblock %}
-    </header>
+        <div class="collapse navbar-collapse justify-content-center order-3 order-lg-2 fs-5" id="navbarNav">
+          <div class="navbar-nav text-lg-start ">
+            <a class="nav-link active text-light" href="{% url 'index' %}">Inicio</a>
+            <a class="nav-link text-light" href="{% url 'view_products' %}">Productos</a>
+            <a class="nav-link text-light" href="#categories">Categorias</a>
+            {% if user.is_authenticated %}
+            <a class="nav-link text-light" href="{% url 'logout' %}">Cerrar sesion</a>
+            {% endif %}
+          </div>
+        </div>
+        <div class="d-flex gap-4 align-items-center order-2 order-lg-3" style="font-size: 32px;">
+          <a href="{% url 'cart' %}"><i class="bi bi-basket2" style="color: white;"></i></a>
+          {% if user.is_authenticated %}
+          <a href="{% url 'perfil' %}" class="initial-user">{{ initial | title }}</a>
+          {% else %}
+          <a href="{% url 'login' %}"><i class="bi bi-person" style="color: white;"></i></a>
+          {% endif %}
+
+        </div>
+      </div>
+    </nav>
+
+    {% block banner %}
+
     {% endblock %}
-    
-    
+  </header>
+  {% endblock %}
+  
+  {% block breadcrumb %}
+  {% include 'breadcrumb.html' %}s
+  {% endblock %}
 
-    <div class="mt-5 pt-5">
-        {% block content %}
 
-        {% endblock %}
-    </div>
 
-    <footer>
+  <div class="mt-5 pt-5">
+    {% block content %}
 
-    </footer>
+    {% endblock %}
+  </div>
+
+  <footer>
+
+  </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
-    crossorigin="anonymous"></script>
+  integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 
 </html>
