--- a/profiles/templates/editar_perfil.html
+++ b/profiles/templates/editar_perfil.html
@@ -17,7 +17,7 @@
     
         <button type="submit">Actualizar perfil</button>
     </form>
-    <a href="">Atras</a>
+    <a href="{% url 'perfil' %}">Atras</a>
 </div>
 
 {% endblock %}
