--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,7 @@
   {% endblock %}
   
   {% block breadcrumb %}
-  {% include 'breadcrumb.html' %}s
+  {% include 'breadcrumb.html' %}
   {% endblock %}
 
 
