--- a/orden/templates/breadcrumb.html
+++ b/orden/templates/breadcrumb.html
@@ -11,11 +11,11 @@
     }
   
     .breadcrumb-item.active {
-      color: rgb(255, 0, 0); /* Rojo para el item activo */
+      color: rgb(255, 0, 0); 
     }
   
     .breadcrumb-item.active a {
-      color: rgb(255, 0, 0); /* Asegurarse de que el color rojo se aplica al enlace */
+      color: rgb(255, 0, 0); 
     }
   </style>
   
