--- a/profiles/templates/changed_password.html
+++ b/profiles/templates/changed_password.html
@@ -1,16 +1,51 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block content %}
-<div style="background: white; margin: auto; color: black; display: flex; flex-direction: column; justify-content: center; align-items: center;">
-    <h1>Cambiar Contraseña</h1>
-    <form method="POST">
-        {% csrf_token %}
-        
-        {{ form.as_p }}
+<link rel="stylesheet" href="{% static 'css/changed_password.css' %}">
+<main>
+    <div class="profile-container">
+        <div class="password-section">
+            <h2 style="font-size: 1.3rem; color: var(--primary-color); margin-bottom: 1rem;">Cambiar Contraseña</h2>
+            
+            <form method="POST">
+                {% csrf_token %}
 
-        <button type="submit">Cambiar Contraseña</button>
+                {{ form.current_password }}
+                {% if form.current_password.errors %}
+                        <ul class="error-list">
+                            {% for error in form.current_password.errors %}
+                                <li class="error-message">{{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
+
+                {{ form.new_password }}
+                {% if form.new_password.errors %}
+                        <ul class="error-list">
+                            {% for error in form.new_password.errors %}
+                                <li class="error-message">{{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
+                {{ form.confirm_password }}
+                {% if form.confirm_password.errors %}
+                        <ul class="error-list">
+                            {% for error in form.confirm_password.errors %}
+                                <li class="error-message">{{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
+                
         
-    </form>
-    <a href="{% url 'perfil' %}">Atras</a>
-</div>
+                <div class="buttons">
+                    <button type="submit">Cambiar Contraseña</button>
+                </div>
+            </form>  
+            <div class="buttons">
+                <button><a href="{% url 'perfil' %}">Atras</a></button>
+            </div>     
+            
+        </div>
+    </div>
+</main>
 {% endblock %}
