--- a/profiles/templates/perfil.html
+++ b/profiles/templates/perfil.html
@@ -1,48 +1,66 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block content %}
-
-<div style="background: white; margin: auto; color: black; display: flex; flex-direction: column; justify-content: center; align-items: center;">
-    <h1>Mi perfil</h1>
-    <div>
-        <strong>Nombres</strong>
-        <br>
-        {{profile.user.first_name}}
-        <br>
-        <strong>Apellidos</strong>
-        <br>
-        {{profile.user.last_name}}
-        <br>
-        <strong>Correo electronico</strong>
-        <br>
-        {{profile.user.email}}
-        <br>
-        <strong>Telefono</strong>
-        <br>
-        {% if profile.phone_number %}
-            {{profile.phone_number}}
-        {% else %}
-            <p>Sin telefono</p>
-        {% endif %}
-        <br>
-        <strong>Direccion</strong>
-        <br>
-        {% if addresses %}
-            {% for address in addresses %}
-            {{ address.calle }} {{ address.num_direccion }}, {{ address.comuna.name }}-{{ address.ciudad }}
-            {% endfor %}
-        {% else %}
-        <p>Sin direcciones</p>
-        {% endif %}
-        <br>
-        <strong>Contraseña</strong>
-        <br>
-        <a href="{% url 'change_password' %}">Cambiar contraseña</a>
-        <br>
-        <a href="{% url 'edit_profile' %}">Editar perfil</a>
-        
-    </div>
-
+<link rel="stylesheet" href="{% static 'css/perfil.css' %}">
+<section>
     
-</div>
+<div class="profile-container">
+    <h1>Mi Perfil</h1>
+    <div class="user-info">
+      <div class="user-card-header">
+        <div class="user-avatar">{{initial | title}}</div>
+        <div>
+          <div class="user-name">{{profile.user.first_name | title }} {{profile.user.last_name | title }}</div>
+          <div class="user-email">{{profile.user.email}}</div>
+        </div>
+      </div>
+      
+      <div class="profile-section">
+        <div class="profile-field">
+          <div class="field-label">Nombres</div>
+          <div class="field-value">{{profile.user.first_name | title }} </div>
+        </div>
+        
+        <div class="profile-field">
+          <div class="field-label">Apellidos</div>
+          <div class="field-value">{{profile.user.last_name | title }}</div>
+        </div>
+        
+        <div class="profile-field">
+          <div class="field-label">Correo electrónico</div>
+          <div class="field-value">{{profile.user.email}}</div>
+        </div>
+        
+        <div class="profile-field">
+          <div class="field-label">Dirección</div>
+            <div class="field-value">
+                {% if addresses %}
+                    {% for address in addresses %}
+                        {{ address.calle }} {{ address.num_direccion }}, {{ address.comuna.name | title }}, {{ address.ciudad }}
+                    {% endfor %}
+                    {% else %}
+                        <p>Sin direcciones</p>
+                {% endif %}
+            </div>
+        </div>
+        
+        <div class="profile-field">
+          <div class="field-label">Teléfono</div>
+            <div class="field-value">
+                {% if profile.phone_number %}
+                    {{profile.phone_number}}
+                {% else %}
+                    <p>Sin telefono</p>
+                {% endif %}
+            </div>
+        </div>
+      </div>
+    </div>
+    <div class="buttons">
+        <button><a href="{% url 'change_password' %}">Cambiar contraseña</a></button>
+        <br>
+        <button><a href="{% url 'edit_profile' %}">Editar perfil</a></button>
+    </div>
+    
+</section>
 {% endblock %}
