--- a/cart/templates/cart_detail.html
+++ b/cart/templates/cart_detail.html
@@ -5,15 +5,14 @@
 <div style="background: #2D2D2D; margin: 0px 200px; padding: 0px 50px;">
 
     <div style="display: flex; justify-content: space-between; padding: 20px; align-items: flex-start;">
-    
-        <!-- Productos -->
-        <div style="color: white; width: 600px; margin-right: 30px;"> <!-- Ancho ajustado para los productos -->
+
+        <div style="color: white; width: 600px; margin-right: 30px;"> 
             <div class="card">
                 <div class="card-body" style="display: flex; flex-direction: column;">
                     {% if cart.productos.exists %}
                         {% for cart_product in cart.product_related %}
                         {% with product=cart_product.productos %}
-                        <div style="background: #444444; margin-bottom: 20px; padding: 15px; border-radius: 8px;">
+                        <div id="product-{{ cart_product.id }}" style="background: #444444; margin-bottom: 20px; padding: 15px; border-radius: 8px;">
                             <div style="display: flex; align-items: center; justify-content: space-between;">
                                 <div style="display: flex; flex-direction: row; align-items: center;">
                                     {% if product.main_image %}
@@ -23,10 +22,12 @@
                                         <p style="font-size: 18px; color: #FFFFFF; margin: 5px 0;">{{ product.name }}</p>
                                         <p style="font-size: 16px; color: #B8B8B8; margin: 5px 0;">Marca: {{ product.brand }}</p>
                                         <p style="font-size: 16px; color: #FFFFFF; margin: 5px 0;">Precio: {{ product.price | format_price }}</p>
+                                        
                                     </div>
                                 </div>
                                 <div style="display: flex; flex-direction: row; align-items: center; color: #FFFFFF;">
                                     <p style="margin-right: 10px;">Cantidad: {{ cart_product.quantity }}</p>
+                                    {% include 'update_quantity.html ' %}
                                     <div>{% include 'remove.html' %}</div>
                                 </div>
                             </div>
@@ -48,7 +49,7 @@
             <p style="font-size: 18px; margin-bottom: 10px;">Subtotal: {{ cart.subtotal | format_price }}</p>
             <hr style="border-top: 1px solid #333;">
             <p style="font-size: 18px; font-weight: bold;">Total: {{ cart.total | format_price }}</p>
-            <a href="#" class="btn btn-primary">Proceder al pago</a> <!--{% url 'orden' %}-->
+            <a href="{% url 'orden' %}" class="btn btn-primary">Proceder al pago</a> 
             <button class="btn btn-secondary" style="margin-top: 10px; background-color: #444; border: none;">Continuar comprando</button>
         </div>
         {% else %}
